[package]
name = "fc-consensus"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Frontier consensus for substrate"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/paritytech/frontier/"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
sp-core = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-blockchain = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-runtime = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-api = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-client-api = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-block-builder = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-inherents = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
fp-consensus = { version = "2.0.0-dev", path = "../../primitives/consensus" }
fp-rpc = { version = "3.0.0-dev", path = "../../primitives/rpc" }
fc-db = { version = "2.0.0-dev", path = "../db" }
sp-consensus = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-consensus = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
log = "0.4.8"
futures = { version = "0.3.17", features = ["compat"] }
sp-timestamp = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
derive_more = "0.99.2"
prometheus-endpoint = {  package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
async-trait = "0.1"